2001-03-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/faces2.shp: the rest of the faces by Philip G.
	* data/cleaver.shp: updated cleaver
	* gumps/Paperdoll_gump_info.cc, data/flx.in, Makefile*: include art

2001-03-16  Ryan Nunn <triforce@merlin.net.au>
	* exult.cc: Video Gamma correction is now written to the config file.
	  Also fixed problem with gamma up making the screen darker and gamma
	  down making the screen lighter.
	* exultmenu.cc, Midi.cc, xmidi.*, MidiInfo.txt: Removed broken
	  GS127DRUM converstion mode. GS127DRUM config options will now default
	  to GS conversion. Config file will be updated to reflect the change.
	  MidiInfo textfile has been modified to reflect the changes.
	* xmidi.cc: Renamed config/audio/midi/gamma config option to
	  config/audio/midi/volume_curve so it's function will be more obvious.
	* docs/serpentsfx.txt: File containing 'names' of Serpent Isle SFX.

2001-03-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/faces.shp: paperdoll art by Philip Gottschalk! Thanks!
	* gumps/Paperdoll_gump_info.cc, data/flx.in, Makefile*: include art
	* data/credits.txt: include Philip in credits

2001-03-15  Jeff Freedman  <jeff@amy.nerble.net>

	* SFX's:  Those from Usecode intrinsics now have volume, L-R
	stereo position set depending on audio source's location.

2001-03-13  Jeff Freedman  <jeff@amy.nerble.net>

	* SFX's:  Wave file spec. moved to game section in .exult.cfg.
	* Bird sounds added.
	* Adding support for volume change in SFX being played.

2001-03-13  Ryan Nunn <triforce@merlin.net.au>
	* gamewin.cc: Game only attempt to detect Black Gate Actor gumps if
	  the game is actually Black Gate.
	* gumps/Gump.cc, objs/contain.cc: Added Tree Gump
	* sigame.cc: Added some more gump shape nums
	* audio/xmidi.*: Changes reverb and chorusing config keys to
	  config/audio/midi/reverb/level and config/audio/midi/chorus/level
	  Added two new options