@@ -86,6 +86,7 @@ EXULT_FLX_OBJECTS = \
 	data/cleaver.shp \
 	data/faces.shp \
 	data/faces2.shp \
+	data/amulets.shp \
 	data/flx.in
 
 $(EXEC) : Makefile data/exult.flx $(OBJS) beos/exult.rsrc
