@@ -33,3 +33,4 @@ magicgorget.shp
 cleaver.shp
 faces.shp
 faces2.shp
+amulets.shp
